--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 </li>
 
                 <li>
-                  <b>Frameworks:</b> Laravel •
+                  <b>Frameworks:</b> Angular17 •  Laravel 
                 </li>
 
                 <li>
