make the links(URL) correctly

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Hazem Alyaari - Portfolio Website</title>
+  <title>Hazem Alyaari - protoflio Website</title>
   <link rel="shortcut icon" href="favicon.ico">
-  <meta name="title" content="Hazem Alyaari - Portfolio Website">
+  <meta name="title" content="Hazem Alyaari - protoflio Website">
   <meta name="description"
-    content="Hi There, I'm Hazem Alyaari, a software developer with strong technical skills. Take a look at this portfolio website and feel free to connect with me.">
+    content="Hi There, I'm Hazem Alyaari, a software developer with strong technical skills. Take a look at this protoflio website and feel free to connect with me.">
   <meta name="keywords"
-    content="About, Experience, Education, Resume, Projects, Hazem AL-Yaari, AlyaariHazem, Hazem Alyaari,Hazem Alyaari Website, Hazem.in, AlyaariHazem.com,hazem.com, hazemalyaari.com, alyaarihazem.com, Haz10em GitHub, .in, Coding Profiles, Contact, Coding, Asp.net, Problem-Solving, Data Structure, Algorithms, Software Engineer, Software Developer, LinkedIn, GitHub, Portfolio, Website, Profile, Links,, MACHINE LEARNING, OPENSOURCE, MYSQL, programming, projects, git, tech,  tech news,  github, portfolio, personal website, Alyaar, Yemen, software developer, coaching, coding, google, amazon, meta, project management, microsoft, netflix, apple, new technology, student" />
+    content="About, Experience, Education, Resume, Projects, Hazem AL-Yaari, AlyaariHazem, Hazem Alyaari,Hazem Alyaari Website, Hazem.in, AlyaariHazem.com,hazem.com, hazemalyaari.com, alyaarihazem.com, Haz10em GitHub, .in, Coding Profiles, Contact, Coding, Asp.net, Problem-Solving, Data Structure, Algorithms, Software Engineer, Software Developer, LinkedIn, GitHub, protoflio, Website, Profile, Links,, MACHINE LEARNING, OPENSOURCE, MYSQL, programming, projects, git, tech,  tech news,  github, protoflio, personal website, Alyaar, Yemen, software developer, coaching, coding, google, amazon, meta, project management, microsoft, netflix, apple, new technology, student" />
   <meta name="date" content="2024-03-20" scheme="YYYY-MM-DD">
 
 
@@ -54,11 +54,11 @@
           <h1 class="text-light"><a href="index.html">Hazem Alyaari</a></h1>
         </center>
         <div class="social-links mt-3 text-center">
-          <a href="https://www.linkedin.com/in/alyaarihazem" target="_blank" title="LinkedIn @Hazem Alyaar"
+          <a href="https://www.linkedin.com/in/hazem-alyaari-23973b2a7/" target="_blank" title="LinkedIn @Hazem Alyaar"
             class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a href="https://github.com/alyaarihazem" target="_blank" title="GitHub @haz10em" class="github"><i
+          <a href="https://github.com/haz10em" target="_blank" title="GitHub @haz10em" class="github"><i
               class="bx bxl-github"></i></a>
-          <a href="https://www.facebook.com/alyaarihazem" target="_blank" title="Facebook @Hazem Abdullah Alyaari"
+          <a href="https://www.facebook.com/profile.php?id=100027605985651" target="_blank" title="Facebook @Hazem Abdullah Alyaari"
             class="facebook"><i class="bx bxl-facebook"></i></a>
 
 
@@ -137,7 +137,7 @@
                   Engineering, which provides professional development, interesting experiences and personal growth.
                 </li>
 
-                <li> <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/alyaarihazem">
+                <li> <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/hazem-alyaari-23973b2a7/">
                     LinkedIn.com/in/HazemAlyaari</a></li>
                 <li> <strong>GitHub:</strong> <a href="https://github.com/haz10em"> GitHub.com/haz10em</a> </li>
 
@@ -247,7 +247,7 @@
 
                 <ul>
                   <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up">
-                    <h4 style="text-align:left;"><a href="https://su.edu.ye/fcit/" target="_blank"
+                    <h4 style="text-align:left;"><a href="https://www.bing.com/search?q=%D8%AC%D8%A7%D9%85%D8%B9%D8%A9+%D8%B5%D9%86%D8%B9%D8%A7%D8%A1&form=ANNTH1&refig=56312f76027d4ad79cb9c1fb96301ade&pc=U531" target="_blank"
                         style="color:#00380d"><b>SANA'A UNIVERSTY</b></a><br> </h4>
                     <h5 style="text-align:left;">IT (INFORMATION TECHNOLOGY)</h5>
                     <p style="text-align:left;color:rgb(255, 0, 0)"><em>2022 - 2026 </em></p>
@@ -286,23 +286,23 @@
           <div class="row">
             <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
               <div class="icon"><i class="icofont-business-man"></i></div>
-              <h4 class="title"><a href="https://samirpaul.in/portfolio" target="_blank">Portfolio Website</a></h4>
+              <h4 class="title"><a href="https://github.com/Hazemalyaari/portfolio" target="_blank">protoflio Website</a></h4>
               <p class="description">A
-                <a href="https://samirpaul.vercel.app" target="_blank">Project</a>
+                <a href="https://github.com/haz10em/portfolio.git" target="_blank">Project</a>
                 for making a blog website attaching about me, contacts, live-map location-services, send a message, all
                 certificates, fetching all current activities on GitHub for opensource contributions. It is a fully
                 customizable website also. The Git repo is available: <a
-                  href="https://github.com/Hazemalyaari/portfolio" target="_blank">Here.⇗
+                  href="https://github.com/haz10em/portfolio.git" target="_blank">Here.⇗
                 </a>
               </p>
             </div>
 
             <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="icofont-business-man"></i></div>
-              <h4 class="title"><a href="https://HazemAlyaari.github.io/mychool/" target="_blank">Myschool </a></h4>
-              <p class="description"> A <a href="https://HazemAlyaari.github.io/myschool/" target="_blank"> Myschool
-                  App</a> developed using JavaScript, CSS, and HTML. The students can downloud this app. The source code
-                is available: <a href="https://github.com/HazemAlyaari/myschool" target="_blank">Here.⇗
+              <h4 class="title"><a href="https://github.com/haz10em/Angular-MySchool.git" target="_blank">Myschool </a></h4>
+              <p class="description"> A <a href="https://github.com/haz10em/Angular-MySchool.git" target="_blank"> Myschool
+                  website</a> developed using JavaScript, CSS, and HTML. The students can downloud this website. The source code
+                is available: <a href="https://github.com/haz10em/Angular-MySchool.git" target="_blank">Here.⇗
                 </a> </p>
               </p>
             </div>
@@ -350,7 +350,7 @@
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="https://formspree.io/f/xpzngkbl" method="post" role="form" class="php-email-form">
+            <form action="" method="post" role="form" class="php-email-form">
               <!-- <input type="hidden" name="_captcha" value="False">
             <input type="hidden" name="_template" value="table">
             <input type="text" name="_honey" style="display:none"> -->
