--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <ul>
           <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#services"><i class="bx bx-code-block"></i> Projects</a></li>
-          <li><a href="https://hazemalyaari.blogspot.com/" target="_blank" title="Blog posts"><i
+          <li><a href="https://www.blogger.com/profile/15568617126796440151" target="_blank" title="Blog posts"><i
                 class="bx bxl-blogger"></i> Blog</a></li>
           <li><a href="#contact"><i class="bx bx-envelope"></i> Contact</a></li>
 
