--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 </li>
 
                 <li>
-                  <b>Databases:</b> MySQL • SQLSERVER • ORACLE
+                  <b>Databases:</b> MySQL • SQLSERVER • ORACLE ,Apex
                 </li>
 
                 <li>
@@ -129,7 +129,7 @@
                 </li>
 
                 <li>
-                  <b>Tools & Technologies:</b> Git ...
+                  <b>Tools & Technologies:</b> Git, Github ...
                 </li>
 
                 <li>
@@ -179,7 +179,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">MySQL <i class="val">80%</i></span>
+              <span class="skill">MySQL ,SQLSERVER ,ORACLE <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -191,23 +191,23 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">Machine Learning<i class="val">80%</i></span>
+              <span class="skill">Angular v17 ,v18 <i class="val">95%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Web Development <i class="val">75%</i></span>
+              <span class="skill">Web Development <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">OpenSource, Git and Github <i class="val">70%</i></span>
+              <span class="skill">Apex, Git and Github <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
                 </div>
