update the URL for website Myschool and add some Libraries, tools and Technologies

--- a/index.html
+++ b/index.html
@@ -121,15 +121,16 @@
                 </li>
 
                 <li>
-                  <b>Libraries:</b> JQUERY • Bootstrap
+                  <b>Libraries:</b> JQUERY • Bootstrap • Material UI • Ajax • Jquery
                 </li>
 
                 <li>
-                  <b>Frameworks:</b> Angular17 •  Laravel 
+                  <b>Frameworks:</b> Angular18 •  Laravel 
                 </li>
 
                 <li>
-                  <b>Tools & Technologies:</b> Git, Github ...
+                  <b>Tools & Technologies:</b> Git • Github • JWT  • Docker • Visual Studio Code • Postman • Visual
+                  Studio 2022 
                 </li>
 
                 <li>
@@ -299,10 +300,10 @@
 
             <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="icofont-business-man"></i></div>
-              <h4 class="title"><a href="https://github.com/haz10em/Angular-MySchool.git" target="_blank">Myschool </a></h4>
-              <p class="description"> A <a href="https://github.com/haz10em/Angular-MySchool.git" target="_blank"> Myschool
-                  website</a> developed using JavaScript, CSS, and HTML. The students can downloud this website. The source code
-                is available: <a href="https://github.com/haz10em/Angular-MySchool.git" target="_blank">Here.⇗
+              <h4 class="title"><a href="https://github.com/haz10em/ASP.NET-with-Angular-18.git" target="_blank">Myschool </a></h4>
+              <p class="description"> A <a href="https://github.com/haz10em/ASP.NET-with-Angular-18.git" target="_blank"> Myschool
+                  website</a> developed using JavaScript, CSS, HTML,ASP.NET Core Web API and Angular 18 . The students can downloud this website. The source code
+                is available: <a href="https://github.com/haz10em/ASP.NET-with-Angular-18.git" target="_blank">Here.⇗
                 </a> </p>
               </p>
             </div>
