--- a/index.html
+++ b/index.html
@@ -315,91 +315,71 @@
         </div>
     </section><!-- End Services Section -->
 
-    <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Contact</h2>
-          <p>Discuss a project or just want to say hi? My Inbox is open for all.
-          </p>
-        </div>
-
-        <div class="row" data-aos="fade-in">
-
-          <div class="col-lg-5 d-flex align-items-stretch">
-            <div class="info">
-              <div class="address">
-                <i class="icofont-google-map"></i>
-                <h4>Location:</h4>
-                <p>Yemen, Sana'a, Alhaymah Aldakliah ,Alyaar</p>
-              </div>
-
-              <div class="email">
-                <i class="icofont-envelope"></i>
-                <h4>Email:</h4>
-                <p><a href="mailto:alyaarihazem@gmail.com">alyaarihazem@gmail.com</a></p>
-              </div>
-
-              <div class="phone">
-                <i class="icofont-phone"></i>
-                <h4>Call:</h4>
-                <p>+967 776137120</p>
-              </div>
-            </div>
-
+   <!-- ======= Contact Section ======= -->
+<section id="contact" class="contact">
+  <div class="container">
+    <div class="section-title">
+      <h2>Contact</h2>
+      <p>Discuss a project or just want to say hi? My Inbox is open for all.</p>
+    </div>
+    <div class="row" data-aos="fade-in">
+      <div class="col-lg-5 d-flex align-items-stretch">
+        <div class="info">
+          <div class="address">
+            <i class="icofont-google-map"></i>
+            <h4>Location:</h4>
+            <p>Yemen, Sana'a, Alhaymah Aldakliah, Alyaar</p>
           </div>
-
-          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="" method="post" role="form" class="php-email-form">
-              <!-- <input type="hidden" name="_captcha" value="False">
-            <input type="hidden" name="_template" value="table">
-            <input type="text" name="_honey" style="display:none"> -->
-              <div class="form-row">
-                <div class="form-group col-md-6">
-                  <label for="name">Your Name</label>
-                  <input type="text" name="name" class="form-control" id="name" data-rule="minlen:4"
-                    data-msg="Please enter at least 4 chars" />
-                  <div class="validate"></div>
-                </div>
-                <div class="form-group col-md-6">
-                  <label for="name">Your Email</label>
-                  <input type="email" class="form-control" name="email" id="email" data-rule="email"
-                    data-msg="Please enter a valid email" />
-                  <div class="validate"></div>
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="name">Subject</label>
-                <input type="text" class="form-control" name="subject" id="subject" data-rule="minlen:4"
-                  data-msg="Please enter at least 8 chars of subject" />
-                <div class="validate"></div>
-              </div>
-              <div class="form-group">
-                <label for="name">Message</label>
-                <textarea class="form-control" name="message" rows="4" data-rule="required"
-                  data-msg="Please write something for me!"></textarea>
-                <div class="validate"></div>
-              </div>
-              <div class="mb-3">
-                <div class="loading">
-                  <p><b>Submitting form</b> please wait.</p>
-                </div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <center>
-                <div class="g-recaptcha" data-sitekey="6Le5xCUiAAAAAIaY5X_Abkbj7G0xnE4vK6vFmQzC"></div>
-              </center>
-              <br />
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
+          <div class="email">
+            <i class="icofont-envelope"></i>
+            <h4>Email:</h4>
+            <p><a href="mailto:alyaarihazem@gmail.com">alyaarihazem@gmail.com</a></p>
           </div>
-
+          <div class="phone">
+            <i class="icofont-phone"></i>
+            <h4>Call:</h4>
+            <p>+967 776137120</p>
+          </div>
         </div>
-
       </div>
-    </section><!-- End Contact Section -->
+      <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+        <form action="index.php" method="post" role="form" class="php-email-form">
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="name">Your Name</label>
+              <input type="text" name="name" class="form-control" id="name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" required />
+              <div class="validate"></div>
+            </div>
+            <div class="form-group col-md-6">
+              <label for="email">Your Email</label>
+              <input type="email" class="form-control" name="email" id="email" data-rule="email" data-msg="Please enter a valid email" required />
+              <div class="validate"></div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="subject">Subject</label>
+            <input type="text" class="form-control" name="subject" id="subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" required />
+            <div class="validate"></div>
+          </div>
+          <div class="form-group">
+            <label for="message">Message</label>
+            <textarea class="form-control" name="message" rows="4" data-rule="required" data-msg="Please write something for me!" required></textarea>
+            <div class="validate"></div>
+          </div>
+          <div class="mb-3">
+            <div class="loading"><p><b>Submitting form</b> please wait.</p></div>
+            <div class="error-message"></div>
+            <div class="sent-message">Your message has been sent. Thank you!</div>
+          </div>
+          <center><div class="g-recaptcha" data-sitekey="6Le5xCUiAAAAAIaY5X_Abkbj7G0xnE4vK6vFmQzC"></div></center>
+          <br />
+          <div class="text-center"><button type="submit">Send Message</button></div>
+        </form>
+      </div>
+    </div>
+  </div>
+</section><!-- End Contact Section -->
+
 
 
   </main><!-- End #main -->
