added the first project with HTML and CSS

--- a/index.html
+++ b/index.html
@@ -372,7 +372,6 @@
                 appointment scheduling, and healthcare workflows. Built using
                 <strong>ASP.NET Core (Back-End)</strong> and <strong>Angular (Front-End)</strong>,
                 providing a secure, responsive, and user-friendly experience.
-                <br><br>
                 Check out the GitHub repository for the source code and setup details:
                 <a href="https://github.com/AlyaariHazem/website-Medisync" target="_blank">Here.⇗</a>
               </p>
@@ -388,6 +387,16 @@
                 code
                 is available: <a href="https://github.com/AlyaariHazem/Project-Disktop-Latest.git"
                   target="_blank">Here.⇗
+                </a> </p>
+              </p>
+            </div>
+
+            <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
+              <div class="icon"><i class="icofont-folder-open"></i></div>
+              <h4 class="title"><a href="https://67a56bf7223ad4dd8da34598--friendly-pony-b3272c.netlify.app/" target="_blank">First Project </a>
+              </h4>
+              <p class="description">My first Project with HTML and CSS <a
+                  href="https://67a56bf7223ad4dd8da34598--friendly-pony-b3272c.netlify.app/" target="_blank">Here.⇗
                 </a> </p>
               </p>
             </div>
