changed the E-commarce URL

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               class="bx bxl-github"></i></a>
           <a href="https://www.facebook.com/profile.php?id=100027605985651" target="_blank"
             title="Facebook Hazem Abdullah Alyaari" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="https://shimmering-banoffee-63eb98.netlify.app/" target="_blank" title="View My E-Commerce Website"
+          <a href="https://magenta-kitten-9a6e8a.netlify.app/" target="_blank" title="View My E-Commerce Website"
             class="website">
             <i class="bx bx-cart"></i>
           </a>
@@ -348,7 +348,7 @@
               <p class="description">
                 This is an E-Commerce website demonstrating how to handle
                 products, categories, a shopping cart, and user authentication. Built
-                Angular (Front-End), and deployed on Netlify <a href="https://shimmering-banoffee-63eb98.netlify.app/"
+                Angular (Front-End), and deployed on Netlify <a href="https://magenta-kitten-9a6e8a.netlify.app/"
                   target="_blank">Here.⇗</a>
                 <br><br>
                 Visit the GitHub repo for source code and setup instructions:
