--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
 
 <body>
   <app-root></app-root>
-<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="scripts-QUBV6JDH.js" defer></script><script src="main-45DVP6OO.js" type="module"></script></body>
+<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="scripts-QUBV6JDH.js" defer></script><script src="main-C4MYNM4Y.js" type="module"></script></body>
 
 </html>
