--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
 
 <body>
   <app-root></app-root>
-<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="scripts-QUBV6JDH.js" defer></script><script src="main-CFXAIMEN.js" type="module"></script></body>
+<script src="polyfills-FFHMD2TL.js" type="module"></script><script src="scripts-QUBV6JDH.js" defer></script><script src="main-NNKBJLP4.js" type="module"></script></body>
 
 </html>
